Use outputDirectory instead of outDir